syntax = "proto3";

package syllabus.v1;

import "syllabus/v1/study_plan.proto";
import "google/protobuf/timestamp.proto";
import "syllabus/v1/enums.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/manabie-com/backend/pkg/manabuf/syllabus/v1;sspb";

message SubmissionContent {
  string submit_media_id = 1;
  string attachment_media_id = 2;    
}

message StudentSubmission {
  string submission_id = 1;
  StudyPlanItemIdentity study_plan_item_identity = 2;
  string note = 3;
  repeated SubmissionContent submission_content = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  SubmissionStatus status = 7;
  google.protobuf.StringValue submission_grade_id = 8;
  string course_id = 9;
  google.protobuf.Timestamp start_date = 10;
  google.protobuf.Timestamp end_date = 11;
  google.protobuf.Timestamp complete_date = 12;
  int32 duration = 13;
  google.protobuf.FloatValue correct_score = 14;
  google.protobuf.FloatValue total_score = 15;
  SubmissionUnderstandingLevel understanding_level = 16;
}